--- a/src/css/avatar.scss
+++ b/src/css/avatar.scss
@@ -1,8 +1,12 @@
+.avatar-wrapper {
+}
+
 .avatar {
 	border-radius: 100%;
-	height: 2rem; 
-	width: 2rem;
+	height: 1.5rem; 
+	width: 1.5rem;
 	overflow: hidden;
+	align-self: center;
 
 	img {
 		width: 100%;
