--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -1,6 +1,7 @@
 /* Nav */
 .nav {
-	padding: 15px 0;
+	padding: 15px 25px;
+	background-color: #fff;
 	border-bottom: 1px solid #854ae3;
 
 	.nav-title {
@@ -10,28 +11,36 @@
 	}
 
 	.nav-items {   
-		border: 1px solid cyan;
-		display: flex;
+		
 		.nav-item {
-			padding: 25px;
-			flex: 1;
-			display: flex;
+			padding-left: 3.5rem;
+			display: inline-block;
 
 			.nav-item-title {			
+				display: inline-block;
 				color: $base-grey;
-				font-size: 0.9rem;
+				font-size: 0.85rem;
 				font-weight: 500;
+				padding-left: 0.5rem;
 			}
 		}
 	}
 	
 	.nav-left {float: left;}
 	.nav-right {float: right;}
+	
+	.avatar {
+		display: inline-block;
+		vertical-align: bottom;
+	}
 
 	.glyphicon {
-		color: $base-orange;
-		padding-right: 10px;
-		flex: 1;
+		color: $base-orange;		
+		align-self: center;
+
+		&:last-child() {
+			padding-right: 0;
+		}
 	}
 }
 
