--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,3 +1,3 @@
 $font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $base-orange: #f96428;
-$base-grey:   #b2b2b2;
+$base-grey:   #a1a1a1;
