--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,3 +1,11 @@
 $font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$base-orange: #f96428;
-$base-grey:   #a1a1a1;
+$font-small: 0.6375rem;
+$font-regular: 0.85rem;
+
+$base-orange: 	#f96428;
+$base-grey:   	#a1a1a1;
+$base-amethyst: #7734e2;
+$deep-amethyst: #6c2fcb;
+$light-amethyst: #bb9af0;
+
+$container-padding: 15px 25px;
