--- a/src/css/jumbovision.scss
+++ b/src/css/jumbovision.scss
@@ -9,7 +9,8 @@
 	 */
 	.display-4 {
 		color: #fff;
-		font-weight: 300;
+		font-weight: 200;
+		font-size: 2.4rem;
 		text-align: center;
 		/* Absolute Centering method */
 		width: 50%;
