--- a/src/css/master.scss
+++ b/src/css/master.scss
@@ -1,9 +1,14 @@
 @import 'variables';
+@import 'container';
 @import 'nav';
 @import 'avatar';
 @import 'search';
 @import 'jumbovision';
 @import 'breadcrumb';
+@import 'button';
+@import 'dashboard';
+@import 'sidebar';
+@import 'filters';
 
 
 /* General */
