--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -4,8 +4,11 @@ $font-regular: 0.85rem;
 
 $base-orange: 	#f96428;
 $base-grey:   	#a1a1a1;
+$light-grey:   	transparentize($base-grey, 0.75);
 $base-amethyst: #7734e2;
 $deep-amethyst: #6c2fcb;
 $light-amethyst: #bb9af0;
 
 $container-padding: 15px 25px;
+
+$small-shadow: 0px 4px 24px -8px rgba(0,0,0,0.75);
