--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -3,6 +3,7 @@ $font-small: 0.6375rem;
 $font-regular: 0.85rem;
 
 $base-orange: 	#f96428;
+$dark-grey:   	#595759;
 $base-grey:   	#a1a1a1;
 $light-grey:   	transparentize($base-grey, 0.75);
 $base-amethyst: #7734e2;
@@ -11,4 +12,5 @@ $light-amethyst: #bb9af0;
 
 $container-padding: 15px 25px;
 
+$close-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
 $small-shadow: 0px 4px 24px -8px rgba(0,0,0,0.75);
