--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -6,11 +6,13 @@ $base-orange: 	#f96428;
 $dark-grey:   	#595759;
 $base-grey:   	#a1a1a1;
 $light-grey:   	transparentize($base-grey, 0.75);
+$background-grey: #f9f9f9;
 $base-amethyst: #7734e2;
 $deep-amethyst: #6c2fcb;
 $light-amethyst: #bb9af0;
 
 $container-padding: 15px 25px;
+$content-padding: 6px 12px;
 
-$close-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+$close-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.25);
 $small-shadow: 0px 4px 24px -8px rgba(0,0,0,0.75);
