fixed graph female male difference centering, renamed as difference-graph

--- a/src/css/search.scss
+++ b/src/css/search.scss
@@ -15,6 +15,13 @@
 	}
 }
 
+.search-button {
+	cursor: pointer;
+	&:hover {
+		color: $base-amethyst;
+	}
+}
+
 /* Dropdown version 
  * - Could use Select2 to replace.
  */
