--- a/src/css/table.scss
+++ b/src/css/table.scss
@@ -6,6 +6,7 @@ table {
 			font-size: 0.86rem;
 		}
 		th {
+			font-weight: 400;
 			text-align: left;
 			&:last-child {
 				text-align: right;
@@ -19,6 +20,9 @@ table {
 			&:first-child {
 				text-align: left;
 			}			
+			&:last-child {
+				text-align: center;
+			}
 		}
 	}
 	.glyphicon {
